--- a/box_utils/box_converter/dataset_builder/configs/2024-11-02-17-18-32.yaml
+++ b/box_utils/box_converter/dataset_builder/configs/2024-11-02-17-18-32.yaml
@@ -1,28 +1,43 @@
 image_topics:
   - alias: zed2i_depth
     topic: "/gt_box/zed2i/zed_node/depth_mono/depth_registered/compressed"
+    format: png
   - alias: zed2i_confidence
     topic: "/gt_box/zed2i/zed_node/confidence_mono/confidence_map/compressed"
+    format: png
+
   - alias: zed2i_left
     topic: "/gt_box/zed2i/zed_node/left/image_rect_color/compressed"
+    format: jpeg
   - alias: zed2i_right
     topic: "/gt_box/zed2i/zed_node/right/image_rect_color/compressed"
+    format: jpeg
+
   - alias: alphasense_cam1
     topic: "/gt_box/alphasense_driver_node/cam1/color_corrected/image/compressed"
+    format: jpeg
   - alias: alphasense_cam2
     topic: "/gt_box/alphasense_driver_node/cam2/color_corrected/image/compressed"
+    format: jpeg
   - alias: alphasense_cam3
     topic: "/gt_box/alphasense_driver_node/cam3/color_corrected/image/compressed"
+    format: jpeg
   - alias: alphasense_cam4
     topic: "/gt_box/alphasense_driver_node/cam4/color_corrected/image/compressed"
+    format: jpeg
   - alias: alphasense_cam5
     topic: "/gt_box/alphasense_driver_node/cam5/color_corrected/image/compressed"
+    format: jpeg
+
   - alias: hdr_left
     topic: "/gt_box/hdr_left/image_raw/compressed"
+    format: jpeg
   - alias: hdr_front
     topic: "/gt_box/hdr_front/image_raw/compressed"
+    format: jpeg
   - alias: hdr_right
     topic: "/gt_box/hdr_right/image_raw/compressed"
+    format: jpeg
 
 lidar_topics:
   - alias: hesai
