--- a/box_utils/box_converter/dataset_builder/configs/default.yaml
+++ b/box_utils/box_converter/dataset_builder/configs/default.yaml
@@ -1,232 +1,276 @@
-image_topics:
-  - alias: zed2i_depth
-    file: 2024-10-01-11-29-55_jetson_zed2i_depth.mcap
-    topic: "/gt_box/zed2i/zed_node/depth_mono/depth_registered/compressed"
-    format: png
-  - alias: zed2i_confidence
-    file: 2024-10-01-11-29-55_jetson_zed2i_depth.mcap
-    topic: "/gt_box/zed2i/zed_node/confidence_mono/confidence_map/compressed"
-    format: png
+metadata:
+  camera_intrinsics:
+    - alias: zed2i_depth
+      file: 2024-10-01-11-29-55_jetson_zed2i_depth.mcap
+      topic: /gt_box/zed2i/zed_node/depth/camera_info
 
-  - alias: zed2i_left
-    file: 2024-10-01-11-29-55_jetson_zed2i_images.mcap
-    topic: "/gt_box/zed2i/zed_node/left/image_rect_color/compressed"
-    format: jpeg
-  - alias: zed2i_right
-    file: 2024-10-01-11-29-55_jetson_zed2i_images.mcap
-    topic: "/gt_box/zed2i/zed_node/right/image_rect_color/compressed"
-    format: jpeg
+    - alias: zed2i_left
+      file: 2024-10-01-11-29-55_jetson_zed2i_images.mcap
+      topic: "/gt_box/zed2i/zed_node/left/camera_info"
+    - alias: zed2i_right
+      file: 2024-10-01-11-29-55_jetson_zed2i_images.mcap
+      topic: "/gt_box/zed2i/zed_node/right/camera_info"
 
-  - alias: alphasense_cam1
-    file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
-    topic: "/gt_box/alphasense_driver_node/cam1/color_corrected/image/compressed"
-    format: jpeg
-  - alias: alphasense_cam2
-    file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
-    topic: "/gt_box/alphasense_driver_node/cam2/color_corrected/image/compressed"
-    format: jpeg
-  - alias: alphasense_cam3
-    file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
-    topic: "/gt_box/alphasense_driver_node/cam3/color_corrected/image/compressed"
-    format: jpeg
-  - alias: alphasense_cam4
-    file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
-    topic: "/gt_box/alphasense_driver_node/cam4/color_corrected/image/compressed"
-    format: jpeg
-  - alias: alphasense_cam5
-    file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
-    topic: "/gt_box/alphasense_driver_node/cam5/color_corrected/image/compressed"
-    format: jpeg
+    - alias: alphasense_cam1
+      file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
+      topic: "/gt_box/alphasense_driver_node/cam1/color/camera_info"
+    - alias: alphasense_cam2
+      file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
+      topic: "/gt_box/alphasense_driver_node/cam2/color/camera_info"
+    - alias: alphasense_cam3
+      file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
+      topic: "/gt_box/alphasense_driver_node/cam3/color/camera_info"
+    - alias: alphasense_cam4
+      file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
+      topic: "/gt_box/alphasense_driver_node/cam4/color/camera_info"
+    - alias: alphasense_cam5
+      file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
+      topic: "/gt_box/alphasense_driver_node/cam5/color/camera_info"
 
-  - alias: hdr_left
-    file: 2024-10-01-11-29-55_jetson_hdr_left_updated.mcap
-    topic: "/gt_box/hdr_left/image_raw/compressed"
-    format: jpeg
-  - alias: hdr_front
-    file: 2024-10-01-11-29-55_jetson_hdr_front_updated.mcap
-    topic: "/gt_box/hdr_front/image_raw/compressed"
-    format: jpeg
-  - alias: hdr_right
-    file: 2024-10-01-11-29-55_jetson_hdr_right_updated.mcap
-    topic: "/gt_box/hdr_right/image_raw/compressed"
-    format: jpeg
+    - alias: hdr_left
+      file: 2024-10-01-11-29-55_jetson_hdr_left_updated.mcap
+      topic: "/gt_box/hdr_left/camera_info"
+    - alias: hdr_front
+      file: 2024-10-01-11-29-55_jetson_hdr_front_updated.mcap
+      topic: "/gt_box/hdr_front/camera_info"
+    - alias: hdr_right
+      file: 2024-10-01-11-29-55_jetson_hdr_right_updated.mcap
+      topic: "/gt_box/hdr_right/camera_info"
+  frame_transforms:
+    base_frame: base
+    file: 2024-10-01-11-29-55_tf_static.mcap
+    topic: /tf_static
 
-lidar_topics:
-  - alias: hesai
-    file: 2024-10-01-11-29-55_nuc_hesai_post_processed.mcap
-    topic: "/gt_box/hesai/points"
-    max_points: 64000
-    attributes:
-      - intensity
-      - ring
-      - timestamp
-  - alias: hesai_last # what is this one?
-    file: 2024-10-01-11-29-55_nuc_hesai_post_processed.mcap
-    topic: "/gt_box/hesai/points_last"
-    max_points: 64000
-    attributes:
-      - intensity
-      - ring
-      - timestamp
-  - alias: livox
-    file: 2024-10-01-11-29-55_nuc_livox.mcap
-    topic: "/gt_box/livox/lidar"
-    max_points: 64000
-    attributes:
-      - intensity
-      - tag
-      - line
-      - timestamp
-  - alias: dlio
-    file: 2024-10-01-11-29-55_dlio.mcap
-    topic: "/dlio/deskewed_point_cloud"
-    max_points: 64000
-    attributes:
-      - intensity
-      - timestamp
+data:
+  image_topics:
+    - alias: zed2i_depth
+      file: 2024-10-01-11-29-55_jetson_zed2i_depth.mcap
+      topic: "/gt_box/zed2i/zed_node/depth_mono/depth_registered/compressed"
+      format: png
+    - alias: zed2i_confidence
+      file: 2024-10-01-11-29-55_jetson_zed2i_depth.mcap
+      topic: "/gt_box/zed2i/zed_node/confidence_mono/confidence_map/compressed"
+      format: png
 
-pose_topics:
-  # do we want both? is the 2nd a superset of the 1st?
-  - alias: ground_truth
-    file: 2024-10-01-11-29-55_gt_pose.mcap
-    topic: "/gt_box/ground_truth/pose_stamped"
-    covariance: false
-  - alias: ground_truth_with_cov
-    file: 2024-10-01-11-29-55_gt_pose.mcap
-    topic: "/gt_box/ground_truth/pose_with_covariance"
-    covariance: true
+    - alias: zed2i_left
+      file: 2024-10-01-11-29-55_jetson_zed2i_images.mcap
+      topic: "/gt_box/zed2i/zed_node/left/image_rect_color/compressed"
+      format: jpeg
+    - alias: zed2i_right
+      file: 2024-10-01-11-29-55_jetson_zed2i_images.mcap
+      topic: "/gt_box/zed2i/zed_node/right/image_rect_color/compressed"
+      format: jpeg
 
-  - alias: dlio_pose
-    file: 2024-10-01-11-29-55_dlio.mcap
-    topic: "/dlio/lidar_odometry_as_posestamped"
-    covariance: false
+    - alias: alphasense_cam1
+      file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
+      topic: "/gt_box/alphasense_driver_node/cam1/color_corrected/image/compressed"
+      format: jpeg
+    - alias: alphasense_cam2
+      file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
+      topic: "/gt_box/alphasense_driver_node/cam2/color_corrected/image/compressed"
+      format: jpeg
+    - alias: alphasense_cam3
+      file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
+      topic: "/gt_box/alphasense_driver_node/cam3/color_corrected/image/compressed"
+      format: jpeg
+    - alias: alphasense_cam4
+      file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
+      topic: "/gt_box/alphasense_driver_node/cam4/color_corrected/image/compressed"
+      format: jpeg
+    - alias: alphasense_cam5
+      file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
+      topic: "/gt_box/alphasense_driver_node/cam5/color_corrected/image/compressed"
+      format: jpeg
 
-  # novatel, do we want all 4?
-  - alias: novatel
-    file: 2024-10-01-11-29-55_cpt7_gps_ie.mcap
-    topic: "/gt_box/inertial_explorer/gt_poses_novatel"
-    covariance: true
-  - alias: novatel_dgps
-    file: 2024-10-01-11-29-55_cpt7_ie_dgps.mcap
-    topic: "/gt_box/inertial_explorer/dgps/gt_poses_novatel"
-    covariance: true
-  - alias: novatel_tc
-    file: 2024-10-01-11-29-55_cpt7_ie_tc.mcap
-    topic: "/gt_box/inertial_explorer/tc/gt_poses_novatel"
-    covariance: true
-  - alias: novatel_lc
-    file: 2024-10-01-11-29-55_cpt7_ie_lc.mcap
-    topic: "/gt_box/inertial_explorer/lc/gt_poses_novatel"
-    covariance: true
-  - alias: novatel_ppp
-    file: 2024-10-01-11-29-55_cpt7_ie_ppp.mcap
-    topic: "/gt_box/inertial_explorer/ppp/gt_poses_novatel"
-    covariance: true
+    - alias: hdr_left
+      file: 2024-10-01-11-29-55_jetson_hdr_left_updated.mcap
+      topic: "/gt_box/hdr_left/image_raw/compressed"
+      format: jpeg
+    - alias: hdr_front
+      file: 2024-10-01-11-29-55_jetson_hdr_front_updated.mcap
+      topic: "/gt_box/hdr_front/image_raw/compressed"
+      format: jpeg
+    - alias: hdr_right
+      file: 2024-10-01-11-29-55_jetson_hdr_right_updated.mcap
+      topic: "/gt_box/hdr_right/image_raw/compressed"
+      format: jpeg
 
-imu_topics:
-  - alias: adis_imu
-    file: 2024-10-01-11-29-55_jetson_adis.mcap
-    topic: "/gt_box/adis16475_node/imu"
-  - alias: ap20_imu
-    file: 2024-10-01-11-29-55_jetson_ap20_synced.mcap
-    topic: "/gt_box/ap20/imu"
-  - alias: stim_imu
-    file: 2024-10-01-11-29-55_jetson_stim.mcap
-    topic: "/gt_box/stim320/imu"
+  lidar_topics:
+    - alias: hesai
+      file: 2024-10-01-11-29-55_nuc_hesai_post_processed.mcap
+      topic: "/gt_box/hesai/points"
+      max_points: 64000
+      attributes:
+        - intensity
+        - ring
+        - timestamp
+    - alias: hesai_last # what is this one?
+      file: 2024-10-01-11-29-55_nuc_hesai_post_processed.mcap
+      topic: "/gt_box/hesai/points_last"
+      max_points: 64000
+      attributes:
+        - intensity
+        - ring
+        - timestamp
+    - alias: livox
+      file: 2024-10-01-11-29-55_nuc_livox.mcap
+      topic: "/gt_box/livox/lidar"
+      max_points: 64000
+      attributes:
+        - intensity
+        - tag
+        - line
+        - timestamp
+    - alias: dlio
+      file: 2024-10-01-11-29-55_dlio.mcap
+      topic: "/dlio/deskewed_point_cloud"
+      max_points: 64000
+      attributes:
+        - intensity
+        - timestamp
 
-  # do we want both?
-  - alias: livox_imu
-    file: 2024-10-01-11-29-55_nuc_livox.mcap
-    topic: "/gt_box/livox/imu"
-  - alias: livox_imu_si_compliant
-    file: 2024-10-01-11-29-55_nuc_livox.mcap
-    topic: "/gt_box/livox/imu_si_compliant"
+  pose_topics:
+    # do we want both? is the 2nd a superset of the 1st?
+    - alias: ground_truth
+      file: 2024-10-01-11-29-55_gt_pose.mcap
+      topic: "/gt_box/ground_truth/pose_stamped"
+      covariance: false
+    - alias: ground_truth_with_cov
+      file: 2024-10-01-11-29-55_gt_pose.mcap
+      topic: "/gt_box/ground_truth/pose_with_covariance"
+      covariance: true
 
-  - alias: zed2i_imu
-    file: 2024-10-01-11-29-55_jetson_zed2i_proprioceptive.mcap
-    topic: "/gt_box/zed2i/zed_node/imu/data"
+    - alias: dlio_pose
+      file: 2024-10-01-11-29-55_dlio.mcap
+      topic: "/dlio/lidar_odometry_as_posestamped"
+      covariance: false
 
-  # do we want both?
-  - alias: cpt7_imu
-    file: 2024-10-01-11-29-55_nuc_cpt7_post_processed.mcap
-    topic: "/gt_box/cpt7/gps/imu"
-  - alias: cpt7_imu_offline_from_novatel
-    file: 2024-10-01-11-29-55_cpt7_raw_imu.mcap
-    topic: "/gt_box/cpt7/offline_from_novatel_logs/imu"
+    # novatel, do we want all 4?
+    - alias: novatel
+      file: 2024-10-01-11-29-55_cpt7_gps_ie.mcap
+      topic: "/gt_box/inertial_explorer/gt_poses_novatel"
+      covariance: true
+    - alias: novatel_dgps
+      file: 2024-10-01-11-29-55_cpt7_ie_dgps.mcap
+      topic: "/gt_box/inertial_explorer/dgps/gt_poses_novatel"
+      covariance: true
+    - alias: novatel_tc
+      file: 2024-10-01-11-29-55_cpt7_ie_tc.mcap
+      topic: "/gt_box/inertial_explorer/tc/gt_poses_novatel"
+      covariance: true
+    - alias: novatel_lc
+      file: 2024-10-01-11-29-55_cpt7_ie_lc.mcap
+      topic: "/gt_box/inertial_explorer/lc/gt_poses_novatel"
+      covariance: true
+    - alias: novatel_ppp
+      file: 2024-10-01-11-29-55_cpt7_ie_ppp.mcap
+      topic: "/gt_box/inertial_explorer/ppp/gt_poses_novatel"
+      covariance: true
 
-# we should use better aliases that are conistent with the corresponding point clouds / poses
-odometry_topics:
-  # do we want all of these?
-  - alias: novatel_odometry
-    file: 2024-10-01-11-29-55_cpt7_gps_ie.mcap
-    topic: "/gt_box/inertial_explorer/odometry"
-  - alias: novatel_tc_odometry
-    file: 2024-10-01-11-29-55_cpt7_ie_tc.mcap
-    topic: "/gt_box/inertial_explorer/tc/odometry"
-  - alias: novatel_ppp_odometry
-    file: 2024-10-01-11-29-55_cpt7_ie_ppp.mcap
-    topic: "/gt_box/inertial_explorer/ppp/odometry"
-  - alias: novatel_lc_odometry
-    file: 2024-10-01-11-29-55_cpt7_ie_lc.mcap
-    topic: "/gt_box/inertial_explorer/lc/odometry"
-  - alias: novatel_dgps_odometry
-    file: 2024-10-01-11-29-55_cpt7_ie_dgps.mcap
-    topic: "/gt_box/inertial_explorer/dgps/odometry"
+  imu_topics:
+    - alias: adis_imu
+      file: 2024-10-01-11-29-55_jetson_adis.mcap
+      topic: "/gt_box/adis16475_node/imu"
+    - alias: ap20_imu
+      file: 2024-10-01-11-29-55_jetson_ap20_synced.mcap
+      topic: "/gt_box/ap20/imu"
+    - alias: stim_imu
+      file: 2024-10-01-11-29-55_jetson_stim.mcap
+      topic: "/gt_box/stim320/imu"
 
-  # do we want both?
-  - alias: dlio_odometry
-    file: 2024-10-01-11-29-55_dlio.mcap
-    topic: "/dlio/lidar_odometry"
-  - alias: dlio_map_odometry
-    file: 2024-10-01-11-29-55_dlio.mcap
-    topic: "/dlio/lidar_map_odometry"
+    # do we want both?
+    - alias: livox_imu
+      file: 2024-10-01-11-29-55_nuc_livox.mcap
+      topic: "/gt_box/livox/imu"
+    - alias: livox_imu_si_compliant
+      file: 2024-10-01-11-29-55_nuc_livox.mcap
+      topic: "/gt_box/livox/imu_si_compliant"
 
-  - alias: cpt7_odometry
-    file: 2024-10-01-11-29-55_nuc_cpt7_post_processed.mcap
-    topic: "/gt_box/cpt7/odom"
-  - alias: zed2i_odometry
-    file: 2024-10-01-11-29-55_jetson_zed2i_proprioceptive.mcap
-    topic: "/gt_box/zed2i/zed_node/odom"
+    - alias: zed2i_imu
+      file: 2024-10-01-11-29-55_jetson_zed2i_proprioceptive.mcap
+      topic: "/gt_box/zed2i/zed_node/imu/data"
 
-nav_sat_fix_topics:
-  - alias: cpt7_gps
-    file: 2024-10-01-11-29-55_nuc_cpt7_post_processed.mcap
-    topic: "/gt_box/cpt7/gps/fix"
+    # do we want both?
+    - alias: cpt7_imu
+      file: 2024-10-01-11-29-55_nuc_cpt7_post_processed.mcap
+      topic: "/gt_box/cpt7/gps/imu"
+    - alias: cpt7_imu_offline_from_novatel
+      file: 2024-10-01-11-29-55_cpt7_raw_imu.mcap
+      topic: "/gt_box/cpt7/offline_from_novatel_logs/imu"
 
-magnetic_field_topics:
-  - alias: zed2i_magnetic_field
-    file: 2024-10-01-11-29-55_jetson_zed2i_proprioceptive.mcap
-    topic: "/gt_box/zed2i/zed_node/imu/mag"
+  # we should use better aliases that are conistent with the corresponding point clouds / poses
+  odometry_topics:
+    # do we want all of these?
+    - alias: novatel_odometry
+      file: 2024-10-01-11-29-55_cpt7_gps_ie.mcap
+      topic: "/gt_box/inertial_explorer/odometry"
+    - alias: novatel_tc_odometry
+      file: 2024-10-01-11-29-55_cpt7_ie_tc.mcap
+      topic: "/gt_box/inertial_explorer/tc/odometry"
+    - alias: novatel_ppp_odometry
+      file: 2024-10-01-11-29-55_cpt7_ie_ppp.mcap
+      topic: "/gt_box/inertial_explorer/ppp/odometry"
+    - alias: novatel_lc_odometry
+      file: 2024-10-01-11-29-55_cpt7_ie_lc.mcap
+      topic: "/gt_box/inertial_explorer/lc/odometry"
+    - alias: novatel_dgps_odometry
+      file: 2024-10-01-11-29-55_cpt7_ie_dgps.mcap
+      topic: "/gt_box/inertial_explorer/dgps/odometry"
 
-# is this a duplicate of the "ground_truth" stuff?
-point_topics:
-  - alias: prism
-    file: 2024-10-01-11-29-55_jetson_ap20_synced.mcap
-    topic: "/gt_box/ap20/prism_position"
+    # do we want both?
+    - alias: dlio_odometry
+      file: 2024-10-01-11-29-55_dlio.mcap
+      topic: "/dlio/lidar_odometry"
+    - alias: dlio_map_odometry
+      file: 2024-10-01-11-29-55_dlio.mcap
+      topic: "/dlio/lidar_map_odometry"
 
-singleton_transform_topics:
-  # im pretty sure this is a duplicate of cpt7_gps
-  - alias: cpt7_gps_tf
-    file: 2024-10-01-11-29-55_cpt7_gps_ie.mcap
-    topic: "/tf"
-  - alias: cpt7_dgps_tf
-    file: 2024-10-01-11-29-55_cpt7_ie_dgps.mcap
-    topic: "/tf"
-  - alias: cpt7_lc_tf
-    file: 2024-10-01-11-29-55_cpt7_ie_lc.mcap
-    topic: "/tf"
-  - alias: cpt7_tc_tf
-    file: 2024-10-01-11-29-55_cpt7_ie_tc.mcap
-    topic: "/tf"
-  - alias: cpt7_ppp_tf
-    file: 2024-10-01-11-29-55_cpt7_ie_ppp.mcap
-    topic: "/tf"
-  - alias: cpt7_post_processed_tf
-    file: 2024-10-01-11-29-55_nuc_cpt7_post_processed_tf.mcap
-    topic: "/tf"
-  - alias: zed2i_tf
-    file: 2024-10-01-11-29-55_jetson_zed2i_tf.mcap
-    topic: "/tf"
+    - alias: cpt7_odometry
+      file: 2024-10-01-11-29-55_nuc_cpt7_post_processed.mcap
+      topic: "/gt_box/cpt7/odom"
+    - alias: zed2i_odometry
+      file: 2024-10-01-11-29-55_jetson_zed2i_proprioceptive.mcap
+      topic: "/gt_box/zed2i/zed_node/odom"
+
+  nav_sat_fix_topics:
+    - alias: cpt7_gps
+      file: 2024-10-01-11-29-55_nuc_cpt7_post_processed.mcap
+      topic: "/gt_box/cpt7/gps/fix"
+
+  magnetic_field_topics:
+    - alias: zed2i_magnetic_field
+      file: 2024-10-01-11-29-55_jetson_zed2i_proprioceptive.mcap
+      topic: "/gt_box/zed2i/zed_node/imu/mag"
+
+  # is this a duplicate of the "ground_truth" stuff?
+  point_topics:
+    - alias: prism
+      file: 2024-10-01-11-29-55_jetson_ap20_synced.mcap
+      topic: "/gt_box/ap20/prism_position"
+
+  singleton_transform_topics:
+    # im pretty sure this is a duplicate of cpt7_gps
+    - alias: cpt7_gps_tf
+      file: 2024-10-01-11-29-55_cpt7_gps_ie.mcap
+      topic: "/tf"
+    - alias: cpt7_dgps_tf
+      file: 2024-10-01-11-29-55_cpt7_ie_dgps.mcap
+      topic: "/tf"
+    - alias: cpt7_lc_tf
+      file: 2024-10-01-11-29-55_cpt7_ie_lc.mcap
+      topic: "/tf"
+    - alias: cpt7_tc_tf
+      file: 2024-10-01-11-29-55_cpt7_ie_tc.mcap
+      topic: "/tf"
+    - alias: cpt7_ppp_tf
+      file: 2024-10-01-11-29-55_cpt7_ie_ppp.mcap
+      topic: "/tf"
+    - alias: cpt7_post_processed_tf
+      file: 2024-10-01-11-29-55_nuc_cpt7_post_processed_tf.mcap
+      topic: "/tf"
+    - alias: zed2i_tf
+      file: 2024-10-01-11-29-55_jetson_zed2i_tf.mcap
+      topic: "/tf"
 # GENERAL NOTES:
 # are odometry messages in general supersets of position messages?, do we really need all of these
 # in general i think that there is a massive hierarchy of dupliate information store, we should propably dedupe this
