updated all mission and default dont move gnss

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ box_utils/box_mission_report/reports*
 box_bringup/bringup_open3d_slam/data/maps/*
 box_utils/box_auto/compose/*_local.yaml
 box_utils/box_auto/cfg/*_local.yaml
+videos/*
+.secrets/*
