--- a/box_utils/box_auto/cfg/lidar_filtering.yaml
+++ b/box_utils/box_auto/cfg/lidar_filtering.yaml
@@ -2,23 +2,26 @@ mode:
   hesai:
     input_topic:
       - "/gt_box/hesai/points"
+    disable_density_filtering: true
     density_filtering_radius: 0.4
+    angular_filtering_range: 1.0
     density_filtering_min_neighbors: 10
     crop_box:
-      min: [-0.9, -0.15, -0.05, 1.0]
-      max: [0.2, 0.15, 0.3, 1.0]
+      min: [-0.5, -0.5, -0.25, 1.0]
+      max: [0.5, 1.5, 0.5, 1.0]
     angle_ranges:
-      - [55.0, 65.0]
-      - [140.0, 220.0]
-      - [295.0, 305.0]
+      - [320.0, 345.0]
+      - [205.0, 230.0]
   livox:
     input_topic:
       - "/gt_box/livox/lidar"
+    disable_density_filtering: true
     density_filtering_radius: 0.4
+    angular_filtering_range: 1.0
     density_filtering_min_neighbors: 10
     crop_box:
-      min: [-0.9, -0.15, -0.05, 1.0]
-      max: [0.2, 0.15, 0.3, 1.0]
+      min: [-0.9, -0.5, -0.05, 1.0]
+      max: [0.5, 0.5, 0.75, 1.0]
     angle_ranges:
       - [55.0, 65.0]
       - [140.0, 220.0]
