--- a/box_utils/box_auto/package.xml
+++ b/box_utils/box_auto/package.xml
@@ -30,6 +30,8 @@
   <depend>cv_bridge</depend>
   <depend>rosbag</depend>
   <depend>nav_msgs</depend>
+  <depend>visualization_msgs</depend>
+  <depend>open3d_catkin</depend>
 
   <!-- To disable 3rd party application building. Set export DEBUG_MODE=1 -->
   <depend condition="$DEBUG_MODE != 1">direct_lidar_inertial_odometry</depend>
