--- a/box_utils/box_converter/huggingface-dataset-conversion/Dockerfile
+++ b/box_utils/box_converter/huggingface-dataset-conversion/Dockerfile
@@ -3,7 +3,7 @@ FROM ros:noetic
 RUN apt-get update && apt-get install -y \
     python3-pip \
     python3-virtualenv \
-    && :
+    && rm -rf /var/lib/apt/lists/*
 
 RUN virtualenv /opt/venv -ppython3
 ENV PATH=/opt/venv/bin:$PATH
@@ -13,12 +13,34 @@ RUN apt-get update && apt-get install -y \
     ffmpeg \
     libsm6 \
     libxext6 \
+    git \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN pip install \
+    pycryptodomex \
+    pyyaml \
+    python-gnupg \
+    rospkg \
+    catkin-tools \
+    osrf-pycommon \
+    empy==3.3.4 \
     && :
 
-RUN . /opt/ros/$ROS_DISTRO/setup.sh
-RUN pip install pycryptodomex pyyaml python-gnupg rospkg
+# install and setup catkin_ws
+RUN mkdir -p /catkin_ws/src
+WORKDIR /catkin_ws
+RUN catkin init
 
-WORKDIR /app
+# installing ros packages
+WORKDIR /catkin_ws/src
+RUN git clone https://github.com/leggedrobotics/tf_bag.git
+RUN git clone https://github.com/leggedrobotics/physical_terrain_parameter_learning.git
+RUN . /opt/ros/$ROS_DISTRO/setup.sh && catkin build
 
-COPY requirements-docker.txt requirements-docker.txt
-RUN pip install -r requirements-docker.txt
+# WORKDIR /catkin_ws/src/app
+# COPY requirements-docker.txt requirements-docker.txt
+# RUN pip install -r requirements-docker.txt
+
+COPY ./entrypoint.sh /
+ENTRYPOINT ["/entrypoint.sh"]
+CMD ["bash"]
