--- a/box_utils/box_auto/package.xml
+++ b/box_utils/box_auto/package.xml
@@ -43,6 +43,7 @@
   <depend condition="$DEBUG_MODE != 1">atn_position3_fuser</depend>
   <depend condition="$DEBUG_MODE != 1">ap20_driver_ros</depend>
   <depend condition="$DEBUG_MODE != 1">open3d_slam_ros</depend>
+  <depend condition="$DEBUG_MODE != 1">any_velodyne_pointcloud</depend>
 
 
 </package>
