--- a/box_utils/box_converter/huggingface-dataset-conversion/dataset_builder/configs/default.yaml
+++ b/box_utils/box_converter/huggingface-dataset-conversion/dataset_builder/configs/default.yaml
@@ -46,54 +46,66 @@ data:
     - alias: zed2i_depth
       file: 2024-10-01-11-29-55_jetson_zed2i_depth.mcap
       topic: "/gt_box/zed2i/zed_node/depth_mono/depth_registered/compressed"
+      compressed: true
       format: png
     - alias: zed2i_confidence
       file: 2024-10-01-11-29-55_jetson_zed2i_depth.mcap
       topic: "/gt_box/zed2i/zed_node/confidence_mono/confidence_map/compressed"
       format: png
+      compressed: true
 
     - alias: zed2i_left
       file: 2024-10-01-11-29-55_jetson_zed2i_images.mcap
       topic: "/gt_box/zed2i/zed_node/left/image_rect_color/compressed"
       format: jpeg
+      compressed: true
     - alias: zed2i_right
       file: 2024-10-01-11-29-55_jetson_zed2i_images.mcap
       topic: "/gt_box/zed2i/zed_node/right/image_rect_color/compressed"
       format: jpeg
+      compressed: true
 
     - alias: alphasense_cam1
       file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
       topic: "/gt_box/alphasense_driver_node/cam1/color_corrected/image/compressed"
       format: jpeg
+      compressed: true
     - alias: alphasense_cam2
       file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
       topic: "/gt_box/alphasense_driver_node/cam2/color_corrected/image/compressed"
       format: jpeg
+      compressed: true
     - alias: alphasense_cam3
       file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
       topic: "/gt_box/alphasense_driver_node/cam3/color_corrected/image/compressed"
       format: jpeg
+      compressed: true
     - alias: alphasense_cam4
       file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
       topic: "/gt_box/alphasense_driver_node/cam4/color_corrected/image/compressed"
       format: jpeg
+      compressed: true
     - alias: alphasense_cam5
       file: 2024-10-01-11-29-55_nuc_alphasense_cor.mcap
       topic: "/gt_box/alphasense_driver_node/cam5/color_corrected/image/compressed"
       format: jpeg
+      compressed: true
 
     - alias: hdr_left
       file: 2024-10-01-11-29-55_jetson_hdr_left_updated.mcap
       topic: "/gt_box/hdr_left/image_raw/compressed"
       format: jpeg
+      compressed: true
     - alias: hdr_front
       file: 2024-10-01-11-29-55_jetson_hdr_front_updated.mcap
       topic: "/gt_box/hdr_front/image_raw/compressed"
       format: jpeg
+      compressed: true
     - alias: hdr_right
       file: 2024-10-01-11-29-55_jetson_hdr_right_updated.mcap
       topic: "/gt_box/hdr_right/image_raw/compressed"
       format: jpeg
+      compressed: true
 
   lidar_topics:
     - alias: hesai
