--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ box_utils/box_converter/image-anonymization-pipeline/models/ego_blur_face.jit
 box_utils/box_converter/image-anonymization-pipeline/models/ego_blur_lp.jit
 box_utils/box_auto/cfg/all_missions_summary_xy_60_120_180.yaml
 box_utils/box_auto/cfg/mission_metadata.yaml
+box_utils/box_converter/cluster/.submit/*
+box_utils/box_converter/cluster/.export/*
