--- a/box_utils/box_auto/cfg/lidar_filtering.yaml
+++ b/box_utils/box_auto/cfg/lidar_filtering.yaml
@@ -17,12 +17,30 @@ mode:
       - "/gt_box/livox/lidar"
     disable_density_filtering: true
     density_filtering_radius: 0.4
-    angular_filtering_range: 1.0
+    angular_filtering_range: 20.0
     density_filtering_min_neighbors: 10
     crop_box:
       min: [-0.9, -0.5, -0.05, 1.0]
       max: [0.5, 0.5, 0.75, 1.0]
     angle_ranges:
       - [55.0, 65.0]
-      - [140.0, 220.0]
       - [295.0, 305.0]
+      - [145.0, 160.0]
+      - [200.0, 215.0]
+      
+  velodyne:
+    input_topic:
+      - "/anymal/velodyne/points"
+      - "/anymal/velodyne/points_undistorted"
+    disable_density_filtering: true
+    density_filtering_radius: 0.4
+    angular_filtering_range: 50.0
+    density_filtering_min_neighbors: 10
+    crop_box:
+      min: [-0.5, -0.75, -0.5, 1.0]
+      max: [1.0, 0.75, 0.5, 1.0]
+    angle_ranges:
+      - [75.0, 85.0]
+      - [95.0, 105.0]
+      - [255.0, 265.0]
+      - [272.0, 282.0]
