--- a/box_utils/box_converter/huggingface-dataset-conversion/dataset_builder/configs/2024-11-11-12-42-47.yaml
+++ b/box_utils/box_converter/huggingface-dataset-conversion/dataset_builder/configs/2024-11-11-12-42-47.yaml
@@ -36,20 +36,6 @@ metadata:
     - alias: hdr_right_caminfo
       file: "{}_jetson_hdr_right_updated.bag"
       topic: "/gt_box/hdr_right/camera_info"
-
-    - alias: anymal_cam_front_lower
-      file: "{}_lpc_depth_cameras.bag"
-      topic: "/depth_camera_front_lower/depth/camera_info"
-    - alias: anymal_cam_front_upper
-      file: "{}_lpc_depth_cameras.bag"
-      topic: "/depth_camera_front_upper/depth/camera_info"
-    - alias: anymal_cam_rear_lower
-      file: "{}_lpc_depth_cameras.bag"
-      topic: "/depth_camera_rear_lower/depth/camera_info"
-    - alias: anymal_cam_rear_upper
-      file: "{}_lpc_depth_cameras.bag"
-      topic: "/depth_camera_rear_upper/depth/camera_info"
-
   frame_transforms:
     base_frame: base
     file: "{}_tf_static.bag"
@@ -158,6 +144,7 @@ data:
       file: "{}_jetson_stim.bag"
       topic: "/gt_box/stim320/imu"
 
+    # do we want both?
     - alias: livox_imu
       file: "{}_nuc_livox.bag"
       topic: "/gt_box/livox/imu"
@@ -169,6 +156,7 @@ data:
       file: "{}_jetson_zed2i_prop.bag"
       topic: "/gt_box/zed2i/zed_node/imu/data"
 
+    # do we want both?
     - alias: cpt7_imu
       file: "{}_nuc_cpt7.bag"
       topic: "/gt_box/cpt7/gps/imu"
@@ -176,19 +164,11 @@ data:
       file: "{}_cpt7_raw_imu.bag"
       topic: "/gt_box/cpt7/offline_from_novatel_logs/imu"
 
-    - alias: anymal_imu
-      file: "{}_lpc_anymal_imu.bag"
-      topic: "/sensors/imu"
-
+  # we should use better aliases that are conistent with the corresponding point clouds / poses
   odometry_topics:
-    - alias: dlio_map_odometry
-      file: "{}_hesai_dlio.bag"
-      topic: "/dlio/lidar_map_odometry"
-
     - alias: cpt7_odometry
       file: "{}_nuc_cpt7.bag"
       topic: "/gt_box/cpt7/odom"
-
     - alias: zed2i_odometry
       file: "{}_jetson_zed2i_prop.bag"
       topic: "/gt_box/zed2i/zed_node/odom"
@@ -210,25 +190,13 @@ data:
       topic: "/gt_box/ap20/prism_position"
 
   singleton_transform_topics:
-    # im pretty sure this is a duplicate of cpt7_gps
-    # - alias: cpt7_gps_tf
-    #   file: "{}_cpt7_gps_ie.bag"
-    #   topic: "/tf"
-    # - alias: cpt7_dgps_tf
-    #   file: "{}_cpt7_ie_dgps.bag"
-    #   topic: "/tf"
-    # - alias: cpt7_lc_tf
-    #   file: "{}_cpt7_ie_lc.bag"
-    #   topic: "/tf"
-    # - alias: cpt7_tc_tf
-    #   file: "{}_cpt7_ie_tc.bag"
-    #   topic: "/tf"
-    # - alias: cpt7_ppp_tf
-    #   file: "{}_cpt7_ie_ppp.bag"
-    #   topic: "/tf"
-    # - alias: cpt7_post_processed_tf
-    #   file: "{}_nuc_cpt7_post_processed_tf.bag"
-    #   topic: "/tf"
     - alias: zed2i_tf
       file: "{}_jetson_zed2i_tf.bag"
       topic: "/tf"
+
+  fluid_pressure_topics:
+    - alias: zed2i_pressure
+      file: "{}_jeson_zed2i_prop.bag"
+      topic: "/gt_box/zed2i/zed_node/barometer"
+
+
