--- a/box_utils/box_converter/huggingface-dataset-conversion/configs/2024-11-11-12-42-47.yaml
+++ b/box_utils/box_converter/huggingface-dataset-conversion/configs/2024-11-11-12-42-47.yaml
@@ -36,6 +36,19 @@ metadata:
     - alias: hdr_right_caminfo
       file: "{}_jetson_hdr_right_updated.bag"
       topic: "/gt_box/hdr_right/camera_info"
+
+    - alias: anymal_cam_front_lower
+      file: "{}_lpc_depth_cameras.bag"
+      topic: "/depth_camera_front_lower/depth/camera_info"
+    - alias: anymal_cam_front_upper
+      file: "{}_lpc_depth_cameras.bag"
+      topic: "/depth_camera_front_upper/depth/camera_info"
+    - alias: anymal_cam_rear_lower
+      file: "{}_lpc_depth_cameras.bag"
+      topic: "/depth_camera_rear_lower/depth/camera_info"
+    - alias: anymal_cam_rear_upper
+      file: "{}_lpc_depth_cameras.bag"
+      topic: "/depth_camera_rear_upper/depth/camera_info"
   frame_transforms:
     base_frame: base
     file: "{}_tf_static.bag"
@@ -107,6 +120,27 @@ data:
       format: jpeg
       compressed: true
 
+    - alias: anymal_cam_front_lower
+      file: "{}_lpc_depth_cameras.bag"
+      topic: "/depth_camera_front_lower/depth/image_rect_raw"
+      format: png
+      compressed: false
+    - alias: anymal_cam_front_upper
+      file: "{}_lpc_depth_cameras.bag"
+      topic: "/depth_camera_front_upper/depth/image_rect_raw"
+      format: png
+      compressed: false
+    - alias: anymal_cam_rear_lower
+      file: "{}_lpc_depth_cameras.bag"
+      topic: "/depth_camera_rear_lower/depth/image_rect_raw"
+      format: png
+      compressed: false
+    - alias: anymal_cam_rear_upper
+      file: "{}_lpc_depth_cameras.bag"
+      topic: "/depth_camera_rear_upper/depth/image_rect_raw"
+      format: png
+      compressed: false
+
   lidar_topics:
     - alias: hesai
       file: "{}_nuc_hesai_post_processed.bag"
@@ -116,6 +150,7 @@ data:
         - intensity
         - ring
         - timestamp
+
     - alias: livox
       file: "{}_nuc_livox.bag"
       topic: "/gt_box/livox/lidar"
@@ -125,6 +160,7 @@ data:
         - tag
         - line
         - timestamp
+
     - alias: dlio
       file: "{}_hesai_dlio.bag"
       topic: "/dlio/deskewed_point_cloud"
@@ -137,17 +173,15 @@ data:
     - alias: adis_imu
       file: "{}_jetson_adis.bag"
       topic: "/gt_box/adis16475_node/imu"
+
     - alias: ap20_imu
       file: "{}_jetson_ap20_synced.bag"
       topic: "/gt_box/ap20/imu"
+
     - alias: stim_imu
       file: "{}_jetson_stim.bag"
       topic: "/gt_box/stim320/imu"
 
-    # do we want both?
-    - alias: livox_imu
-      file: "{}_nuc_livox.bag"
-      topic: "/gt_box/livox/imu"
     - alias: livox_imu_si_compliant
       file: "{}_nuc_livox.bag"
       topic: "/gt_box/livox/imu_si_compliant"
@@ -160,9 +194,18 @@ data:
     - alias: cpt7_imu
       file: "{}_nuc_cpt7.bag"
       topic: "/gt_box/cpt7/gps/imu"
-    - alias: cpt7_imu_offline_from_novatel
+
+    - alias: cpt7_imu_offline_novatel
       file: "{}_cpt7_raw_imu.bag"
       topic: "/gt_box/cpt7/offline_from_novatel_logs/imu"
+
+    - alias: anymal_imu
+      file: "{}_lpc_anymal_imu.bag"
+      topic: "/sensors/imu"
+
+    - alias: alphasense_imu
+      file: "{}_nuc_alphasense.mcap"
+      topic: "/gt_box/alphasense_driver_node/imu"
 
   # we should use better aliases that are conistent with the corresponding point clouds / poses
   odometry_topics:
@@ -199,4 +242,11 @@ data:
       file: "{}_jeson_zed2i_prop.bag"
       topic: "/gt_box/zed2i/zed_node/barometer"
 
+  temperature_topics:
+    - alias: stim320_accelerometer_temp
+      file: "{}_jetson_stim.bag"
+      topic: "/gt_box/stim320/acceletometer_temperature"
 
+    - alias: stim320_gyroscope_temp
+      file: "{}_jetson_stim.bag"
+      topic: "/gt_box/stim320/gyroscope_temperature"
