--- a/box_utils/box_converter/huggingface-dataset-conversion/configs/2024-11-11-12-42-47.yaml
+++ b/box_utils/box_converter/huggingface-dataset-conversion/configs/2024-11-11-12-42-47.yaml
@@ -2,7 +2,7 @@ metadata:
   camera_intrinsics:
     - alias: zed2i_depth_caminfo
       file: "{}_jetson_zed2i_depth.bag"
-      topic: /gt_box/zed2i/zed_node/depth/camera_info
+      topic: "/gt_box/zed2i/zed_node/depth/camera_info"
 
     - alias: zed2i_left_caminfo
       file: "{}_jetson_zed2i_images.bag"
@@ -28,31 +28,31 @@ metadata:
       topic: "/gt_box/alphasense_driver_node/cam5/color/camera_info"
 
     - alias: hdr_left_caminfo
-      file: "{}_jetson_hdr_left_updated.bag"
+      file: "{}_jetson_hdr_left.bag"
       topic: "/gt_box/hdr_left/camera_info"
     - alias: hdr_front_caminfo
-      file: "{}_jetson_hdr_front_updated.bag"
+      file: "{}_jetson_hdr_front.bag"
       topic: "/gt_box/hdr_front/camera_info"
     - alias: hdr_right_caminfo
-      file: "{}_jetson_hdr_right_updated.bag"
+      file: "{}_jetson_hdr_right.bag"
       topic: "/gt_box/hdr_right/camera_info"
 
-    - alias: anymal_cam_front_lower
+    - alias: anymal_cam_front_lower_caminfo
       file: "{}_lpc_depth_cameras.bag"
       topic: "/depth_camera_front_lower/depth/camera_info"
-    - alias: anymal_cam_front_upper
+    - alias: anymal_cam_front_upper_caminfo
       file: "{}_lpc_depth_cameras.bag"
       topic: "/depth_camera_front_upper/depth/camera_info"
-    - alias: anymal_cam_rear_lower
+    - alias: anymal_cam_rear_lower_caminfo
       file: "{}_lpc_depth_cameras.bag"
       topic: "/depth_camera_rear_lower/depth/camera_info"
-    - alias: anymal_cam_rear_upper
+    - alias: anymal_cam_rear_upper_caminfo
       file: "{}_lpc_depth_cameras.bag"
       topic: "/depth_camera_rear_upper/depth/camera_info"
   frame_transforms:
     base_frame: base
     file: "{}_tf_static.bag"
-    topic: /tf_static
+    topic: "/tf_static"
 
 data:
   image_topics:
@@ -105,17 +105,17 @@ data:
       compressed: true
 
     - alias: hdr_left
-      file: "{}_jetson_hdr_left_updated.bag"
+      file: "{}_jetson_hdr_left.bag"
       topic: "/gt_box/hdr_left/image_raw/compressed"
       format: jpeg
       compressed: true
     - alias: hdr_front
-      file: "{}_jetson_hdr_front_updated.bag"
+      file: "{}_jetson_hdr_front.bag"
       topic: "/gt_box/hdr_front/image_raw/compressed"
       format: jpeg
       compressed: true
     - alias: hdr_right
-      file: "{}_jetson_hdr_right_updated.bag"
+      file: "{}_jetson_hdr_right.bag"
       topic: "/gt_box/hdr_right/image_raw/compressed"
       format: jpeg
       compressed: true
@@ -161,22 +161,14 @@ data:
         - line
         - timestamp
 
-    - alias: dlio
-      file: "{}_hesai_dlio.bag"
-      topic: "/dlio/deskewed_point_cloud"
-      max_points: 64000
-      attributes:
-        - intensity
-        - timestamp
-
   imu_topics:
     - alias: adis_imu
       file: "{}_jetson_adis.bag"
       topic: "/gt_box/adis16475_node/imu"
 
     - alias: ap20_imu
-      file: "{}_jetson_ap20_synced.bag"
-      topic: "/gt_box/ap20/imu"
+      file: "{}_jetson_ap20_aux.bag"
+      topic: "/ap20/imu"
 
     - alias: stim_imu
       file: "{}_jetson_stim.bag"
@@ -204,10 +196,9 @@ data:
       topic: "/sensors/imu"
 
     - alias: alphasense_imu
-      file: "{}_nuc_alphasense.mcap"
+      file: "{}_nuc_alphasense.bag"
       topic: "/gt_box/alphasense_driver_node/imu"
 
-  # we should use better aliases that are conistent with the corresponding point clouds / poses
   odometry_topics:
     - alias: cpt7_odometry
       file: "{}_nuc_cpt7.bag"
@@ -226,12 +217,6 @@ data:
       file: "{}_jetson_zed2i_prop.bag"
       topic: "/gt_box/zed2i/zed_node/imu/mag"
 
-  # is this a duplicate of the "ground_truth" stuff?
-  point_topics:
-    - alias: prism
-      file: "{}_jetson_ap20_synced.bag"
-      topic: "/gt_box/ap20/prism_position"
-
   singleton_transform_topics:
     - alias: zed2i_tf
       file: "{}_jetson_zed2i_tf.bag"
@@ -239,7 +224,7 @@ data:
 
   fluid_pressure_topics:
     - alias: zed2i_pressure
-      file: "{}_jeson_zed2i_prop.bag"
+      file: "{}_jetson_zed2i_prop.bag"
       topic: "/gt_box/zed2i/zed_node/barometer"
 
   temperature_topics:
