--- a/.gitmodules
+++ b/.gitmodules
@@ -95,3 +95,7 @@
 [submodule "box_drivers/grand_tour_depth_benchmark"]
 	path = box_drivers/grand_tour_depth_benchmark
 	url = git@github.com:leggedrobotics/grand_tour_depth_benchmark.git
+[submodule "box_applications/gtsam_catkin"]
+	path = box_applications/gtsam_catkin
+	url = git@github.com:leggedrobotics/gtsam_catkin.git
+	branch = main
