--- a/box_utils/box_auto/cfg/boxi_tf_pure_perception.yaml
+++ b/box_utils/box_auto/cfg/boxi_tf_pure_perception.yaml
@@ -2,6 +2,7 @@ tfStaticRepetitionPeriod: 5 # seconds
 frameMapping:
   - new: "velodyne_lidar"
     old: "lidar"
+    replicate: false
 
 framePairs:
   - parent: "base"
